Исправлено поведение карточек в каталоге

--- a/index.html
+++ b/index.html
@@ -112,76 +112,78 @@
         </ul>
       </section>
 
-      <section class="popular-products">
-        <h2>Популярные товары</h2>
-        <a class="button" href="#">Все популярные товары</a>
-        <ul class="popular-products-list">
-          <li class="catalog-item">
-            <h3>
-              <a href="#">Перфоратор BOSCH BFG 9000</a>
-            </h3>
-            <p class="catalog-item-image">
-              <a href="#"><img src="img/bosch-bfg-9.png" width="218" height="170" alt="Перфоратор BOSCH BFG 9000"></a>
-            </p>
-            <p class="catalog-item-price">
-              <span class="old-price">32500 Р.</span>
-              <span class="price">25500 Р.</span>
-            </p>
-            <p class="catalog-item-order">
-              <a href="#">Купить</a>
-              <a href="#">В закладки</a>
-            </p>
-          </li>
-          <li class="catalog-item">
-            <h3>
-              <a href="#">Перфоратор BOSCH BFG 3000</a>
-            </h3>
-            <p class="catalog-item-image">
-              <a href="#"><img src="img/bosch-bfg-3.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
-            </p>
-            <p class="catalog-item-price">
-              <span class="old-price">22500 Р.</span>
-              <span class="price">15500 Р.</span>
-            </p>
-            <p class="catalog-item-order">
-              <a href="#">Купить</a>
-              <a href="#">В закладки</a>
-            </p>
-          </li>
-          <li class="catalog-item">
-            <h3>
-              <a href="#">Перфоратор BOSCH BFG 6000</a>
-            </h3>
-            <p class="catalog-item-image">
-              <a href="#"><img src="img/bosch-bfg-6.png" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
-            </p>
-            <p class="catalog-item-price">
-              <span class="old-price">30500 Р.</span>
-              <span class="price">25500 Р.</span>
-            </p>
-            <p class="catalog-item-order">
-              <a href="#">Купить</a>
-              <a href="#">В закладки</a>
-            </p>
-          </li>
-          <li class="catalog-item">
-            <span class="new-product">New</span>
-            <h3>
-              <a href="#">Перфоратор BOSCH BFG 2000</a>
-            </h3>
-            <p class="catalog-item-image">
-              <a href="#"><img src="img/bosch-bfg-2.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
-            </p>
-            <p class="catalog-item-price">
-              <span class="price">12500 Р.</span>
-            </p>
-            <p class="catalog-item-order">
-              <a href="#">Купить</a>
-              <a href="#">В закладки</a>
-            </p>
-          </li>
-        </ul>
-      </section>
+      <div class="container">
+        <section class="popular-products">
+          <h2>Популярные товары</h2>
+          <a class="button" href="#">Все популярные товары</a>
+          <ul class="popular-products-list">
+            <li class="catalog-item">
+              <h3>
+                <a href="#">Перфоратор BOSCH BFG 9000</a>
+              </h3>
+              <p class="catalog-item-image">
+                <a href="#"><img src="img/bosch-bfg-9.png" width="218" height="170" alt="Перфоратор BOSCH BFG 9000"></a>
+              </p>
+              <p class="catalog-item-price">
+                <span class="old-price">32500 Р.</span>
+                <span class="price">25500 Р.</span>
+              </p>
+              <p class="catalog-item-order">
+                <a class="button button-buy" href="#">Купить</a>
+                <a class="button button-bookmarks" href="#">В закладки</a>
+              </p>
+            </li>
+            <li class="catalog-item">
+              <h3>
+                <a href="#">Перфоратор BOSCH BFG 3000</a>
+              </h3>
+              <p class="catalog-item-image">
+                <a href="#"><img src="img/bosch-bfg-3.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
+              </p>
+              <p class="catalog-item-price">
+                <span class="old-price">22500 Р.</span>
+                <span class="price">15500 Р.</span>
+              </p>
+              <p class="catalog-item-order">
+                <a class="button button-buy" href="#">Купить</a>
+                <a class="button button-bookmarks" href="#">В закладки</a>
+              </p>
+            </li>
+            <li class="catalog-item">
+              <h3>
+                <a href="#">Перфоратор BOSCH BFG 6000</a>
+              </h3>
+              <p class="catalog-item-image">
+                <a href="#"><img src="img/bosch-bfg-6.png" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
+              </p>
+              <p class="catalog-item-price">
+                <span class="old-price">30500 Р.</span>
+                <span class="price">25500 Р.</span>
+              </p>
+              <p class="catalog-item-order">
+                <a class="button button-buy" href="#">Купить</a>
+                <a class="button button-bookmarks" href="#">В закладки</a>
+              </p>
+            </li>
+            <li class="catalog-item">
+              <span class="new-product">New</span>
+              <h3>
+                <a href="#">Перфоратор BOSCH BFG 2000</a>
+              </h3>
+              <p class="catalog-item-image">
+                <a href="#"><img src="img/bosch-bfg-2.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
+              </p>
+              <p class="catalog-item-price">
+                <span class="price">12500 Р.</span>
+              </p>
+              <p class="catalog-item-order">
+                <a class="button button-buy" href="#">Купить</a>
+                <a class="button button-bookmarks" href="#">В закладки</a>
+              </p>
+            </li>
+          </ul>
+        </section>
+      </div>
 
       <section class="popular-brands">
         <h2>Популярные производители</h2>
