--- a/catalog.html
+++ b/catalog.html
@@ -156,150 +156,152 @@
             </div>
 
             <ul class="catalog-list">
-              <li class="catalog-item">
-                <h3>
-                  <a href="#">Перфоратор BOSCH BFG 3000</a>
-                </h3>
-                <p class="catalog-item-image">
-                  <a href="#"><img src="img/bosch-bfg-3.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
-                </p>
-                <p class="catalog-item-price">
-                  <span class="old-price">22500 Р.</span>
-                  <span class="price">15500 Р.</span>
-                </p>
-                <p class="catalog-item-order">
-                  <a class="button button-buy" href="#">Купить</a>
-                  <a class="button button-bookmarks" href="#">В закладки</a>
-                </p>
-              </li>
-              <li class="catalog-item">
-                <h3>
-                  <a href="#">Перфоратор BOSCH BFG 6000</a>
-                </h3>
-                <p class="catalog-item-image">
-                  <a href="#"><img src="img/bosch-bfg-6.png" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
-                </p>
-                <p class="catalog-item-price">
-                  <span class="old-price">30500 Р.</span>
-                  <span class="price">25500 Р.</span>
-                </p>
-                <p class="catalog-item-order">
-                  <a class="button button-buy" href="#">Купить</a>
-                  <a class="button button-bookmarks" href="#">В закладки</a>
-                </p>
-              </li>
-              <li class="catalog-item">
-                <span class="new-product">New</span>
-                <h3>
-                  <a href="#">Перфоратор BOSCH BFG 2000</a>
-                </h3>
-                <p class="catalog-item-image">
-                  <a href="#"><img src="img/bosch-bfg-2.png" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
-                </p>
-                <p class="catalog-item-price">
-                  <span class="price">12500 Р.</span>
-                </p>
-                <p class="catalog-item-order">
-                  <a class="button button-buy" href="#">Купить</a>
-                  <a class="button button-bookmarks" href="#">В закладки</a>
-                </p>
-              </li>
-              <li class="catalog-item">
-                <h3>
-                  <a href="#">Перфоратор BOSCH BFG 3000</a>
-                </h3>
-                <p class="catalog-item-image">
-                  <a href="#"><img src="img/bosch-bfg-3.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
-                </p>
-                <p class="catalog-item-price">
-                  <span class="old-price">22500 Р.</span>
-                  <span class="price">15500 Р.</span>
-                </p>
-                <p class="catalog-item-order">
-                  <a class="button button-buy" href="#">Купить</a>
-                  <a class="button button-bookmarks" href="#">В закладки</a>
-                </p>
-              </li>
-              <li class="catalog-item">
-                <span class="new-product">New</span>
-                <h3>
-                  <a href="#">Перфоратор BOSCH BFG 6000</a>
-                </h3>
-                <p class="catalog-item-image">
-                  <a href="#"><img src="img/bosch-bfg-6.png" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
-                </p>
-                <p class="catalog-item-price">
-                  <span class="old-price">30500 Р.</span>
-                  <span class="price">25500 Р.</span>
-                </p>
-                <p class="catalog-item-order">
-                  <a class="button button-buy" href="#">Купить</a>
-                  <a class="button button-bookmarks" href="#">В закладки</a>
-                </p>
-              </li>
-              <li class="catalog-item">
-                <h3>
-                  <a href="#">Перфоратор BOSCH BFG 2000</a>
-                </h3>
-                <p class="catalog-item-image">
-                  <a href="#"><img src="img/bosch-bfg-2.png" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
-                </p>
-                <p class="catalog-item-price">
-                  <span class="price">12500 Р.</span>
-                </p>
-                <p class="catalog-item-order">
-                  <a class="button button-buy" href="#">Купить</a>
-                  <a class="button button-bookmarks" href="#">В закладки</a>
-                </p>
-              </li>
-              <li class="catalog-item">
-                <span class="new-product">New</span>
-                <h3>
-                  <a href="#">Перфоратор BOSCH BFG 3000</a>
-                </h3>
-                <p class="catalog-item-image">
-                  <a href="#"><img src="img/bosch-bfg-3.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
-                </p>
-                <p class="catalog-item-price">
-                  <span class="old-price">22500 Р.</span>
-                  <span class="price">15500 Р.</span>
-                </p>
-                <p class="catalog-item-order">
-                  <a class="button button-buy" href="#">Купить</a>
-                  <a class="button button-bookmarks" href="#">В закладки</a>
-                </p>
-              </li>
-              <li class="catalog-item">
-                <h3>
-                  <a href="#">Перфоратор BOSCH BFG 6000</a>
-                </h3>
-                <p class="catalog-item-image">
-                  <a href="#"><img src="img/bosch-bfg-6.png" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
-                </p>
-                <p class="catalog-item-price">
-                  <span class="old-price">30500 Р.</span>
-                  <span class="price">25500 Р.</span>
-                </p>
-                <p class="catalog-item-order">
-                  <a class="button button-buy" href="#">Купить</a>
-                  <a class="button button-bookmarks" href="#">В закладки</a>
-                </p>
-              </li>
-              <li class="catalog-item">
-                <h3>
-                  <a href="#">Перфоратор BOSCH BFG 2000</a>
-                </h3>
-                <p class="catalog-item-image">
-                  <a href="#"><img src="img/bosch-bfg-2.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
-                </p>
-                <p class="catalog-item-price">
-                  <span class="price">12500 Р.</span>
-                </p>
-                <p class="catalog-item-order">
-                  <a class="button button-buy" href="#">Купить</a>
-                  <a class="button button-bookmarks" href="#">В закладки</a>
-                </p>
-              </li>
+              <div class="catalog-row">
+                <li class="catalog-item">
+                  <h3>
+                    <a href="#">Перфоратор BOSCH BFG 3000</a>
+                  </h3>
+                  <p class="catalog-item-image">
+                    <a href="#"><img src="img/bosch-bfg-3.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
+                  </p>
+                  <p class="catalog-item-price">
+                    <span class="old-price">22500 Р.</span>
+                    <span class="price">15500 Р.</span>
+                  </p>
+                  <p class="catalog-item-order">
+                    <a class="button button-buy" href="#">Купить</a>
+                    <a class="button button-bookmarks" href="#">В закладки</a>
+                  </p>
+                </li>
+                <li class="catalog-item">
+                  <h3>
+                    <a href="#">Перфоратор BOSCH BFG 6000</a>
+                  </h3>
+                  <p class="catalog-item-image">
+                    <a href="#"><img src="img/bosch-bfg-6.png" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
+                  </p>
+                  <p class="catalog-item-price">
+                    <span class="old-price">30500 Р.</span>
+                    <span class="price">25500 Р.</span>
+                  </p>
+                  <p class="catalog-item-order">
+                    <a class="button button-buy" href="#">Купить</a>
+                    <a class="button button-bookmarks" href="#">В закладки</a>
+                  </p>
+                </li>
+                <li class="catalog-item">
+                  <span class="new-product">New</span>
+                  <h3>
+                    <a href="#">Перфоратор BOSCH BFG 2000</a>
+                  </h3>
+                  <p class="catalog-item-image">
+                    <a href="#"><img src="img/bosch-bfg-2.png" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
+                  </p>
+                  <p class="catalog-item-price">
+                    <span class="price">12500 Р.</span>
+                  </p>
+                  <p class="catalog-item-order">
+                    <a class="button button-buy" href="#">Купить</a>
+                    <a class="button button-bookmarks" href="#">В закладки</a>
+                  </p>
+                </li>
+                <li class="catalog-item">
+                  <h3>
+                    <a href="#">Перфоратор BOSCH BFG 3000</a>
+                  </h3>
+                  <p class="catalog-item-image">
+                    <a href="#"><img src="img/bosch-bfg-3.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
+                  </p>
+                  <p class="catalog-item-price">
+                    <span class="old-price">22500 Р.</span>
+                    <span class="price">15500 Р.</span>
+                  </p>
+                  <p class="catalog-item-order">
+                    <a class="button button-buy" href="#">Купить</a>
+                    <a class="button button-bookmarks" href="#">В закладки</a>
+                  </p>
+                </li>
+                <li class="catalog-item">
+                  <span class="new-product">New</span>
+                  <h3>
+                    <a href="#">Перфоратор BOSCH BFG 6000</a>
+                  </h3>
+                  <p class="catalog-item-image">
+                    <a href="#"><img src="img/bosch-bfg-6.png" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
+                  </p>
+                  <p class="catalog-item-price">
+                    <span class="old-price">30500 Р.</span>
+                    <span class="price">25500 Р.</span>
+                  </p>
+                  <p class="catalog-item-order">
+                    <a class="button button-buy" href="#">Купить</a>
+                    <a class="button button-bookmarks" href="#">В закладки</a>
+                  </p>
+                </li>
+                <li class="catalog-item">
+                  <h3>
+                    <a href="#">Перфоратор BOSCH BFG 2000</a>
+                  </h3>
+                  <p class="catalog-item-image">
+                    <a href="#"><img src="img/bosch-bfg-2.png" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
+                  </p>
+                  <p class="catalog-item-price">
+                    <span class="price">12500 Р.</span>
+                  </p>
+                  <p class="catalog-item-order">
+                    <a class="button button-buy" href="#">Купить</a>
+                    <a class="button button-bookmarks" href="#">В закладки</a>
+                  </p>
+                </li>
+                <li class="catalog-item">
+                  <span class="new-product">New</span>
+                  <h3>
+                    <a href="#">Перфоратор BOSCH BFG 3000</a>
+                  </h3>
+                  <p class="catalog-item-image">
+                    <a href="#"><img src="img/bosch-bfg-3.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
+                  </p>
+                  <p class="catalog-item-price">
+                    <span class="old-price">22500 Р.</span>
+                    <span class="price">15500 Р.</span>
+                  </p>
+                  <p class="catalog-item-order">
+                    <a class="button button-buy" href="#">Купить</a>
+                    <a class="button button-bookmarks" href="#">В закладки</a>
+                  </p>
+                </li>
+                <li class="catalog-item">
+                  <h3>
+                    <a href="#">Перфоратор BOSCH BFG 6000</a>
+                  </h3>
+                  <p class="catalog-item-image">
+                    <a href="#"><img src="img/bosch-bfg-6.png" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
+                  </p>
+                  <p class="catalog-item-price">
+                    <span class="old-price">30500 Р.</span>
+                    <span class="price">25500 Р.</span>
+                  </p>
+                  <p class="catalog-item-order">
+                    <a class="button button-buy" href="#">Купить</a>
+                    <a class="button button-bookmarks" href="#">В закладки</a>
+                  </p>
+                </li>
+                <li class="catalog-item">
+                  <h3>
+                    <a href="#">Перфоратор BOSCH BFG 2000</a>
+                  </h3>
+                  <p class="catalog-item-image">
+                    <a href="#"><img src="img/bosch-bfg-2.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
+                  </p>
+                  <p class="catalog-item-price">
+                    <span class="price">12500 Р.</span>
+                  </p>
+                  <p class="catalog-item-order">
+                    <a class="button button-buy" href="#">Купить</a>
+                    <a class="button button-bookmarks" href="#">В закладки</a>
+                  </p>
+                </li>
+              </div>
             </ul>
 
             <ul class="pagination-list">
