Декоративное оформление основных блоков
Главная страница

--- a/catalog.html
+++ b/catalog.html
@@ -20,8 +20,8 @@
             <button class="button search-button" type="submit">Найти</button>
           </form>
           <ul class="purchase">
-            <li><a href="#">Закладки: 0</a></li>
-            <li class="purchase-filled"><a href="#">Корзина: 10</a></li>
+            <li><a class="bookmarks" href="#">Закладки: 0</a></li>
+            <li class="purchase-filled"><a class="cart" href="#">Корзина: 10</a></li>
             <li class="place-order"><a href="#">Оформить заказ</a></li>
           </ul>
         </div>
@@ -355,9 +355,9 @@
             Все права защищены
           </p>
           <ul class="footer-social">
-            <li><a class="social-button" href="#">Вконтакте</a></li>
-            <li><a class="social-button" href="#">Фейсбук</a></li>
-            <li><a class="social-button" href="#">Инстаграм</a></li>
+            <li><a class="social-button vk" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+            <li><a class="social-button facebook" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+            <li><a class="social-button instagram" href="#"><span class="visually-hidden">Инстаграм</span></a></li>
           </ul>
           <p class="footer-feedback">
             Обратная связь: <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
