--- a/index.html
+++ b/index.html
@@ -16,19 +16,22 @@
           </a>
           <form class="search-form" method="get" action="https://echo.htmlacademy.ru">
             <label class="visually-hidden" for="filter-search">Поиск</label>
-            <input type="search" name="search" placeholder="Поиск:" id="filter-search" required>
-            <button class="button search-button" type="submit">Найти</button>
+            <input class="search" type="search" name="search" placeholder="Поиск:" id="filter-search" required>
+            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+              <path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/>
+            </svg>
+            <button class="button search-button visually-hidden" type="submit">Найти</button>
           </form>
           <ul class="purchase">
-            <li><a href="#">Закладки: 0</a></li>
-            <li><a href="#">Корзина: 0</a></li>
+            <li><a class="bookmarks" href="#">Закладки: 0</a></li>
+            <li><a class="cart" href="#">Корзина: 0</a></li>
             <li class="place-order"><a href="#">Оформить заказ</a></li>
           </ul>
         </div>
       </div>
 
       <div class="header-middle container">
-        <h1 class="index-page-title">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+        <h1 class="index-page-title">Интернет-магазин строительных материалов <br>и инструментов для ремонта</h1>
         <p class="header-contacts">
           <span class="phone">
             <a href="tel:+78125550555">+7 (812) 555-05-55</a>
@@ -36,7 +39,7 @@
           <span class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
         </p>
         <ul class="authorization">
-          <li><a class="button button-authorization" href="login.html">Войти</a></li>
+          <li><a class="button button-authorization login-link" href="login.html">Войти</a></li>
           <li><a class="button button-authorization" href="signup.html">Регистрация</a></li>
         </ul>
       </div>
@@ -114,7 +117,7 @@
 
       <div class="container">
         <section class="popular-products">
-          <h2>Популярные товары</h2>
+          <h2>Популярные товары:</h2>
           <a class="button" href="#">Все популярные товары</a>
           <ul class="popular-products-list">
             <li class="catalog-item">
@@ -186,7 +189,7 @@
       </div>
 
       <section class="popular-brands">
-        <h2>Популярные производители</h2>
+        <h2>Популярные производители:</h2>
         <a class="button" href="#">Все производители</a>
         <ul class="popular-brands-list">
           <li class="popular-brand-item">
@@ -265,7 +268,7 @@
         <section class="about">
           <h2>Компания «Техномарт»</h2>
           <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-          <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
+          <p>Мы можем доставить ваш товар в самые отдаленные точки России! <br>Техномарт работает со многими транспортными компаниями:</p>
           <ul class="delivery-list">
             <li>Деловые линии</li>
             <li>Автотрейдинг</li>
@@ -276,7 +279,7 @@
 
         <section class="contacts">
           <h2>Контакты</h2>
-          <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+          <p>Вы можете забрать товар сами, <br>заехав в наш офис:</p>
           <a href="#"><img src="img/map.png" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></a>
           <a class="button" href="#">Заблудились? Напишите нам!</a>
         </section>
@@ -314,9 +317,9 @@
             Все права защищены
           </p>
           <ul class="footer-social">
-            <li><a class="social-button" href="#">Вконтакте</a></li>
-            <li><a class="social-button" href="#">Фейсбук</a></li>
-            <li><a class="social-button" href="#">Инстаграм</a></li>
+            <li><a class="social-button vk" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+            <li><a class="social-button facebook" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+            <li><a class="social-button instagram" href="#"><span class="visually-hidden">Инстаграм</span></a></li>
           </ul>
           <p class="footer-feedback">
             Обратная связь: <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
