--- a/catalog.html
+++ b/catalog.html
@@ -16,8 +16,11 @@
           </a>
           <form class="search-form" method="get" action="https://echo.htmlacademy.ru">
             <label class="visually-hidden" for="filter-search">Поиск</label>
-            <input type="search" name="search" placeholder="Поиск:" id="filter-search" required>
-            <button class="button search-button" type="submit">Найти</button>
+            <input class="search" type="search" name="search" placeholder="Поиск:" id="filter-search" required>
+            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+              <path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/>
+            </svg>
+            <button class="button search-button visually-hidden" type="submit">Найти</button>
           </form>
           <ul class="purchase">
             <li><a class="bookmarks" href="#">Закладки: 0</a></li>
@@ -28,7 +31,7 @@
       </div>
 
       <div class="header-middle container">
-        <p class="index-page-title">Интернет-магазин строительных материалов и инструментов для ремонта</p>
+        <p class="index-page-title">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</p>
         <p class="header-contacts">
           <span class="phone">
             <a href="tel:+78125550555">+7 (812) 555-05-55</a>
@@ -37,11 +40,28 @@
         </p>
         <ul class="authorized">
           <div class="user-menu">
-            <li class="user-profile"><a href="#">Равшан Джамшутович</a></li>
-            <li class="user-logout"><a href="#">Выход</a></li>
+            <li class="user-profile">
+              <a href="#">
+                <svg enable-background="new 0 0 20 18" height="18" viewBox="0 0 20 18" width="20" xmlns="http://www.w3.org/2000/svg">
+                  <path d="m17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278 0-2.807-1.8-5.083-4.021-5.083s-4.021 2.276-4.021 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39s-2.118 3.834-2.118 3.834h20s.025-3.099-2.119-3.834z" fill="#c5c5c5"/>
+                </svg>
+                Равшан Джамшутович</a>
+            </li>
+            <li class="user-logout">
+              <a href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="17" viewBox="0 0 21 17">
+                  <g fill="#c5c5c5">
+                    <path d="M21 8.5L12.125 0v6h-6v5h6v6z"/>
+                    <path d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z"/>
+                  </g>
+                </svg>
+              <span class="visually-hidden">Выход</span></a>
+            </li>
           </div>
-          <li class="user-navigation"><a href="#">Мои заказы</a></li>
-          <li class="user-navigation"><a href="#">Личный кабинет</a></li>
+          <div class="user-navigation">
+            <li><a class="orders" href="#">Мои заказы</a></li>
+            <li><a class="profile" href="#">Личный кабинет</a></li>
+          </div>
         </ul>
       </div>
 
@@ -63,10 +83,12 @@
       <div class="main-wrapper">
         <div class="container">
           <ul class="breadcrumbs">
-            <li><a href="index.html">Главная</a></li>
+            <li class="main-page"><a href="index.html"><span class="visually-hidden">Главная</span></a></li>
+            <div class="side">
             <li><a href="#">Каталог</a></li>
             <li><a href="#">Инструмент</a></li>
             <li><a href="#">Перфораторы</a></li>
+            </div>
           </ul>
 
           <h1 class="page-title">Перфораторы</h1>
@@ -189,7 +211,7 @@
                 </p>
               </li>
               <li class="catalog-item">
-                <span class="new-product">New</span>
+                <span class="new-product"><span class="text">New</span></span>
                 <h3>
                   <a href="#">Перфоратор BOSCH BFG 2000</a>
                 </h3>
@@ -197,6 +219,7 @@
                   <a href="#"><img src="img/bosch-bfg-2.png" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
                 </p>
                 <p class="catalog-item-price">
+                  <span class="old-price"></span>
                   <span class="price">12500 Р.</span>
                 </p>
                 <p class="catalog-item-order">
@@ -221,7 +244,7 @@
                 </p>
               </li>
               <li class="catalog-item">
-                <span class="new-product">New</span>
+                <span class="new-product"><span class="text">New</span></span>
                 <h3>
                   <a href="#">Перфоратор BOSCH BFG 6000</a>
                 </h3>
@@ -245,6 +268,7 @@
                   <a href="#"><img src="img/bosch-bfg-2.png" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
                 </p>
                 <p class="catalog-item-price">
+                  <span class="old-price"></span>
                   <span class="price">12500 Р.</span>
                 </p>
                 <p class="catalog-item-order">
@@ -253,7 +277,7 @@
                 </p>
               </li>
               <li class="catalog-item">
-                <span class="new-product">New</span>
+                <span class="new-product"><span class="text">New</span></span>
                 <h3>
                   <a href="#">Перфоратор BOSCH BFG 3000</a>
                 </h3>
@@ -293,6 +317,7 @@
                   <a href="#"><img src="img/bosch-bfg-2.png" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
                 </p>
                 <p class="catalog-item-price">
+                  <span class="old-price"></span>
                   <span class="price">12500 Р.</span>
                 </p>
                 <p class="catalog-item-order">
@@ -370,10 +395,12 @@
     </footer>
 
     <div class="modal modal-cart-notification">
-      <p class="modal-cart-info">Товар добавлен в корзину!</p>
-      <a class="button" href="#">Оформить заказ</a>
-      <button class="button button-continue" type="button">Продолжить покупки</button>
-      <button class="modal-close" type="button">Закрыть</button>
-    </div>
+        <p class="modal-cart-info">Товар добавлен в корзину!</p>
+        <div class="modal-bottom">
+          <a class="button" href="#">Оформить заказ</a>
+          <button class="button button-continue" type="button">Продолжить покупки</button>
+        </div>
+        <button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
+      </div>
   </body>
 </html>
