Оживлены форма и карта

--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
         <section class="contacts">
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-          <a href="#"><img src="img/map.png" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></a>
-          <a class="button" href="#">Заблудились? Напишите нам!</a>
+          <a class="contacts-map" href="#"><img src="img/map.png" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></a>
+          <a class="write-us-link button" href="feedback.html">Заблудились? Напишите нам!</a>
         </section>
       </div>
     </main>
@@ -340,13 +340,14 @@
 
     <section class="modal modal-map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
-      <img src="img/map-big.png" width="940" height="446" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+      <iframe src="https://yandex.ru/map-widget/v1/-/CBFXQGSKCD" width="940" height="446" frameborder="1" allowfullscreen="true"></iframe>
+      <p><img src="img/map-big.png" width="940" height="446" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></p>
       <button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
     </section>
 
     <section class="modal modal-write-us">
       <h2 class="visually-hidden">Обратная связь</h2>
-      <form class="write-us-form" method="post" action="https://echo.htmlacademy.ru">
+      <form id="write-us-form" class="write-us-form" method="post" action="https://echo.htmlacademy.ru">
         <p>
           <label for="write-us-name">Ваше имя:</label>
           <input type="text" name="name" placeholder="Имя Фамилия" id="write-us-name" required>
@@ -357,13 +358,13 @@
         </p>
         <p class="textarea">
           <label for="write-us-text">Текст письма:</label>
-          <textarea class="write-us-field" name="text" id="write-us-text" required>В свободной форме</textarea>
+          <textarea class="write-us-field" name="text" id="write-us-text" placeholder="В свободной форме" required></textarea>
         </p>
-        <button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
       </form>
       <div class="modal-bottom">
-        <button class="button" type="submit">Отправить</button>
+        <button class="button" type="submit" form="write-us-form">Отправить</button>
       </div>
+      <button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
     </section>
 
     <div class="modal modal-cart-notification">
@@ -374,5 +375,7 @@
       </div>
       <button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
     </div>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
