--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Техномарт</title>
-    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&#124;PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700%7CPT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -287,7 +287,7 @@
         <section class="contacts">
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-          <a class="contacts-map" href="#"><img src="img/map.png" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></a>
+          <a class="contacts-map" href="map.html"><img src="img/map.png" width="300px" height="158px" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></a>
           <a class="write-us-link button" href="feedback.html">Заблудились? Напишите нам!</a>
         </section>
       </div>
@@ -340,7 +340,7 @@
 
     <section class="modal modal-map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
-      <iframe src="https://yandex.ru/map-widget/v1/-/CBFXQGSKCD" width="940" height="446" frameborder="1" allowfullscreen="true"></iframe>
+      <iframe src="https://yandex.ru/map-widget/v1/-/CBFXQGSKCD" width="940" height="446" allowfullscreen="allowfullscreen"></iframe>
       <p><img src="img/map-big.png" width="940" height="446" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></p>
       <button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
     </section>
@@ -376,6 +376,6 @@
       <button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
