Исправлены размеры у карты

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         <section class="contacts">
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-          <a class="contacts-map" href="map.html"><img src="img/map.png" width="300px" height="158px" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></a>
+          <a class="contacts-map" href="map.html"><img src="img/map.png" width="300" height="158" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></a>
           <a class="write-us-link button" href="feedback.html">Заблудились? Напишите нам!</a>
         </section>
       </div>
