--- a/catalog.html
+++ b/catalog.html
@@ -55,7 +55,8 @@
                     <path d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z"/>
                   </g>
                 </svg>
-              <span class="visually-hidden">Выход</span></a>
+                <span class="visually-hidden">Выход</span>
+              </a>
             </li>
           </ul>
           <ul class="user-navigation">
@@ -161,7 +162,6 @@
 
         <section class="catalog">
           <div class="catalog-sorting">
-            <h2 class="visually-hidden">Список перфораторов</h2>
             <h3 class="sorting-heading">Сортировка:</h3>
             <ul class="sorting-type">
               <li><a class="sorting sorting-type-active" href="#">По цене</a></li>
@@ -174,6 +174,7 @@
             </ul>
           </div>
 
+          <h2 class="visually-hidden">Список перфораторов</h2>
           <ul class="catalog-list">
             <li class="catalog-item">
               <h3>
