--- a/index.html
+++ b/index.html
@@ -75,44 +75,40 @@
             <h3>Техника</h3>
             <a class="button button-promo" href="#">Для стройки</a>
           </li>
-          <li>
-            <div class="products-carousel">
-              <h2 class="visually-hidden">Спецпредложения</h2>
-              <ul class="products-slides">
-                <li class="products-slides-item">
-                  <h3 class="promo-heading">Дрели</h3>
-                  <p class="promo-text">Соседям на радость!</p>
-                  <img src="img/promo-1.jpg" width="620" height="266" alt="Промо-изображение дрелей BOSCH">
-                  <a class="button" href="catalog.html">Открыть каталог</a>
-                </li>
-                <li class="products-slides-item">
-                  <h3 class="promo-heading">Перфораторы</h3>
-                  <p class="promo-text">Настоящие мужские игрушки</p>
-                  <img src="img/promo-2.jpg" width="620" height="266" alt="Промо-изображение перфораторов BOSCH">
-                  <a class="button" href="catalog.html">Открыть каталог</a>
-                </li>
-              </ul>
-              <div class="slides-switches">
-                <input type="radio" id="btn-1" name="toggle">
-                <label class="slide-radio-active" for="btn-1"><span class="visually-hidden">Слайд 1</span></label>
-                <input type="radio" id="btn-2" name="toggle">
-                <label for="btn-2"><span class="visually-hidden">Слайд 2</span></label>
-              </div>
-              <button class="slide-btn-back"><span class="visually-hidden">Предыдущий слайд</span></button>
-              <button class="slide-btn-next"><span class="visually-hidden">Следующий слайд</span></button>
-            </div>
-          </li>
-          <li class="promo-right">
-            <ul>
-              <li class="promo-item promo-sale">
-                <h3>Скидки 50%</h3>
-                <a class="button button-promo" href="#">На 350 товаров</a>
+          <li class="products-carousel">
+            <h2 class="visually-hidden">Спецпредложения</h2>
+            <ul class="products-slides">
+              <li class="products-slides-item">
+                <h3 class="promo-heading">Дрели</h3>
+                <p class="promo-text">Соседям на радость!</p>
+                <img src="img/promo-1.jpg" width="620" height="266" alt="Промо-изображение дрелей BOSCH">
+                <a class="button" href="catalog.html">Открыть каталог</a>
               </li>
-              <li class="promo-item promo-delivery">
-                <h3>Доставка</h3>
-                <a class="button button-promo" href="#">Бесплатно</a>
+              <li class="products-slides-item">
+                <h3 class="promo-heading">Перфораторы</h3>
+                <p class="promo-text">Настоящие мужские игрушки</p>
+                <img src="img/promo-2.jpg" width="620" height="266" alt="Промо-изображение перфораторов BOSCH">
+                <a class="button" href="catalog.html">Открыть каталог</a>
               </li>
             </ul>
+            <div class="slides-switches">
+              <input class="slide-radio visually-hidden" type="radio" id="btn-1" name="toggle">
+              <label class="slide-radio-active" for="btn-1"><span class="visually-hidden">Слайд 1</span></label>
+              <input class="slide-radio visually-hidden" type="radio" id="btn-2" name="toggle">
+              <label for="btn-2"><span class="visually-hidden">Слайд 2</span></label>
+            </div>
+            <button class="slide-btn-back"><span class="visually-hidden">Предыдущий слайд</span></button>
+            <button class="slide-btn-next"><span class="visually-hidden">Следующий слайд</span></button>
+          </li>
+          <li class="promo-right">
+            <div class="promo-item promo-sale">
+              <h3>Скидки 50%</h3>
+              <a class="button button-promo" href="#">На 350 товаров</a>
+            </div>
+            <div class="promo-item promo-delivery">
+              <h3>Доставка</h3>
+              <a class="button button-promo" href="#">Бесплатно</a>
+            </div>
           </li>
         </ul>
       </section>
@@ -207,7 +203,7 @@
             <a href="#"><img src="img/dewalt.png" width="146" height="44" alt="Логотип DeWALT"></a>
           </li>
           <li class="popular-brand-item">
-            <a href="#"><img src="img/interskol.png" width="200" height="88" alt="Логотип ИНТЕРСКОЛ"></a>
+            <a href="#"><img src="img/interskol.png" width="200" height="76" alt="Логотип ИНТЕРСКОЛ"></a>
           </li>
           <li class="popular-brand-item">
             <a href="#"><img src="img/hitachi.png" width="169" height="31" alt="Логотип HITACHI"></a>
@@ -219,7 +215,7 @@
             <a href="#"><img src="img/aeg.png" width="151" height="96" alt="Логотип AEG"></a>
           </li>
           <li class="popular-brand-item">
-            <a href="#"><img src="img/metabo.png" width="204" height="69" alt="Логотип Metabo"></a>
+            <a href="#"><img src="img/metabo.png" width="204" height="57" alt="Логотип Metabo"></a>
           </li>
         </ul>
       </section>
@@ -324,9 +320,9 @@
             Все права защищены
           </p>
           <ul class="footer-social">
-            <li><a class="social-button vk" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
-            <li><a class="social-button facebook" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
-            <li><a class="social-button instagram" href="#"><span class="visually-hidden">Инстаграм</span></a></li>
+            <li><a class="social-button vk" href="#"><span class="visually-hidden">Наша страница Вконтакте</span></a></li>
+            <li><a class="social-button facebook" href="#"><span class="visually-hidden">"Техномарт" на Фейсбуке</span></a></li>
+            <li><a class="social-button instagram" href="#"><span class="visually-hidden">Инстаграм-аккаунт "Техномарта"</span></a></li>
           </ul>
           <p class="footer-feedback">
             Обратная связь: <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
